# macha

./: .gitignore  CLAUDE.md  JOB_PIPELINE_PLAN.md  MACHA_PLAN.md  README.md
.claude/: session_history.md
.claude/commands/: job:analyze.md  job:answer.md  job:apply.md  job:scrape.md  job:source.md
jobs/: seen.txt  sources.txt
jobs/profile/: cover_letter_style.md  profile.txt
macha-viewer/: README.md  macha-viewer.cabal
macha-viewer/app/: Main.hs
macha-viewer/src/Viewer/: Html.hs  Markdown.hs  Server.hs  Types.hs
macha-viewer/static/: index.html
macha-viewer/test/Viewer/: MarkdownSpec.hs  ServerSpec.hs
