cabal-version: 3.0
name:          macha-viewer
version:       0.1.0.0
synopsis:      Lightweight markdown file browser for job applications
license:       BSD-3-Clause
build-type:    Simple

library
  default-language: GHC2021
  hs-source-dirs:   src
  exposed-modules:
    Viewer.Server
    Viewer.Markdown
    Viewer.Types
    Viewer.Html

  build-depends:
    base       >= 4.17 && < 5,
    scotty     >= 0.21,
    text       >= 2.0,
    aeson      >= 2.1,
    cmark-gfm  >= 0.2,
    directory  >= 1.3,
    filepath   >= 1.4,
    time       >= 1.9,
    bytestring >= 0.11,
    warp       >= 3.3,
    wai        >= 3.2,
    wai-extra  >= 3.1,
    http-types >= 0.12

  ghc-options: -Wall -O1

executable macha-viewer
  default-language: GHC2021
  hs-source-dirs:   app
  main-is:          Main.hs

  build-depends:
    base         >= 4.17 && < 5,
    macha-viewer

  ghc-options: -Wall -O1 -threaded

test-suite macha-viewer-test
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs

  other-modules:
    Viewer.MarkdownSpec
    Viewer.ServerSpec

  build-tool-depends:
    hspec-discover:hspec-discover >= 2.10

  build-depends:
    base         >= 4.17 && < 5,
    macha-viewer,
    hspec        >= 2.10,
    scotty       >= 0.21,
    text         >= 2.0,
    directory    >= 1.3,
    filepath     >= 1.4,
    temporary    >= 1.3,
    aeson        >= 2.1,
    http-types   >= 0.12,
    wai          >= 3.2,
    wai-extra    >= 3.1,
    bytestring   >= 0.11

  ghc-options: -Wall -threaded
